# sqlite-vss-exercise

./: .gitignore  README.md  build_db.py  pyproject.toml
src/sqlite_vss_exercise/: __init__.py
